Revision history for JSON-Schema-Modern

{{$NEXT}}

0.542     2022-01-23 08:17:08Z
          - new "strict" option (and --strict flag to json-schema-eval), for
            disallowing unknown keywords

0.541     2022-01-17 23:57:35Z
          - add --add-schema option to json-schema-eval to allow for the
            reference of additional schemas during evaluation

0.540     2022-01-17 18:58:36Z
          - make "unimplemented format" errors more visible
          - fixed serializing of results in acceptance tests
          - add --validate-schema option to json-schema-eval to provide an
            easy way to validate a schema against its meta-schema

0.539     2022-01-06 04:07:20Z
          - updated error message for the "type" keyword to include the actual
            type, as well as the expected type(s)

0.538     2021-12-31 21:18:21Z
          - remove no-longer-needed TODO in tests that caused warnings in
            small-int systems

0.537     2021-12-30 22:49:02Z
          - fix number/integer differentiation on small-int systems
          - improve division calculations if either argument is a non-integer

0.536     2021-12-30 05:32:44Z
          - very large/small numbers are now properly accomodated in all
            cases, including from JSON-serialized data

0.535     2021-12-28 06:38:37Z
          - mark more tests TODO (temporarily!) for small-int systems

0.534     2021-12-27 21:05:34Z
          - clarify exit statuses for 'json-schema-eval'
          - fix numeric tests for architectures with small int size
          - fix handling of unsigned ints that cannot be represented in a
            signed int

0.533     2021-12-23 19:45:11Z
          - fix exit statuses in json-schema-eval

0.532     2021-12-22 19:14:06Z
          - add media_type decoders for application/schema+json,
            application/schema-instance+json
          - add 'json-schema-eval' executable, for ad-hoc evaluation

0.531     2021-12-06 05:39:53Z