@@ -20,31 +20,51 @@ ok(!$js->strict, 'strict defaults to false');
 
 my $schema = {
   '$id' => 'my_loose_schema',
-  type => 'string',
-  bloop => 'hi',
-  barf => 'no',
+  type => 'object',
+  properties => {
+    foo => {
+      bloop => 'hi',
+      barf => 'no',
+    },
+  },
 };
 
 my $document = $js->add_schema('my_loose_schema' => $schema);
 
 cmp_deeply(
-  $js->evaluate('hi', $document)->TO_JSON,
+  $js->evaluate({ foo => 1 }, 'my_loose_schema')->TO_JSON,
   { valid => true },
   'by default, unknown keywords are allowed',
+);
+
+cmp_deeply(
+  $js->evaluate({ foo => 1 }, 'my_loose_schema', { strict => 1 })->TO_JSON,
+  {
+    valid => false,
+    errors => [
+      {
+        instanceLocation => '/foo',
+        keywordLocation => '/properties/foo',
+        absoluteKeywordLocation => 'my_loose_schema#/properties/foo',
+        error => 'unknown keywords found: barf, bloop',
+      },
+    ],
+  },
+  'strict mode disallows unknown keywords during evaluation via a config override',
 );
 
 $js = JSON::Schema::Modern->new(strict => 1);
 $js->add_schema($document);
 
 cmp_deeply(
-  $js->evaluate('hi', $document)->TO_JSON,
+  $js->evaluate({ foo => 1 }, $document)->TO_JSON,
   {
     valid => false,
     errors => [
       {
-        instanceLocation => '',
-        keywordLocation => '',
-        absoluteKeywordLocation => 'my_loose_schema',
+        instanceLocation => '/foo',
+        keywordLocation => '/properties/foo',
+        absoluteKeywordLocation => 'my_loose_schema#/properties/foo',
         error => 'unknown keywords found: barf, bloop',
       },
     ],
@@ -54,13 +74,13 @@ cmp_deeply(
 
 delete $schema->{'$id'};
 cmp_deeply(
-  $js->evaluate('hi', $schema)->TO_JSON,
+  $js->evaluate({ foo => 1 }, $schema)->TO_JSON,
   {
     valid => false,
     errors => [
       {
-        instanceLocation => '',
-        keywordLocation => '',
+        instanceLocation => '', # note no instance location - indicating evaluation has not started
+        keywordLocation => '/properties/foo',
         error => 'unknown keywords found: barf, bloop',
       },
     ],
